fix menu on mobile not toggling

--- a/static/less/header.less
+++ b/static/less/header.less
@@ -99,14 +99,6 @@ header.masthead {
 #nav-toggle {
 	display: none;
 }
-#navBar {
-	position: relative;
-}
-
-/* fix FOUC */
-.no-js .top-bar {
-    display: none;
-}
 
 @media screen and (min-width: 40em) {
     .no-js .top-bar, #nav-toggle {
